--- a/.github/workflows/bookdepth-incremental.yml
+++ b/.github/workflows/bookdepth-incremental.yml
@@ -10,7 +10,7 @@ on:
         description: 'Enddatum (YYYY-MM-DD)'
         required: true
   schedule:
-    - cron: '40 8 * * *'
+    - cron: '40 8 * * *'  # täglich 08:40 UTC
 
 jobs:
   download-and-feature:
@@ -21,6 +21,7 @@ jobs:
       max-parallel: 1
 
     steps:
+      # 1) Checkout + Rebase, damit wir immer clean sind
       - name: Checkout & sync
         uses: actions/checkout@v4
         with:
@@ -29,6 +30,7 @@ jobs:
       - name: Sync remote main
         run: git pull --rebase origin main
 
+      # 2) Python-Setup
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
@@ -37,18 +39,20 @@ jobs:
       - name: Install dependencies
         run: pip install --upgrade pandas pyarrow scipy
 
-      - name: Make extractor script executable
-        run: chmod +x extract_bookDepth_features.py
-        
-      - name: Make append script executable
-        run: chmod +x scripts/append_bookdepth.py  
+      # 3) Mach die Skripte ausführbar
+      - name: Make scripts executable
+        run: |
+          chmod +x extract_bookDepth_features.py
+          chmod +x scripts/append_bookDepth.py
 
+      # 4) Termine berechnen
       - name: Calc dates
         id: dates
         run: |
           echo "global_start=2025-01-01"       >> $GITHUB_OUTPUT
           echo "today=$(date -I -d 'yesterday')" >> $GITHUB_OUTPUT
 
+      # 5) Resume-Logik
       - name: Determine resume point
         id: resume
         run: |
@@ -56,15 +60,18 @@ jobs:
           DIR=features/bookDepth/${SYMBOL}
           mkdir -p "$DIR"
           OLD=$(ls $DIR/${SYMBOL}-features-*.parquet 2>/dev/null | sort | tail -n1 || true)
+
           if [[ -n "$OLD" ]]; then
-            END_OLD=$(basename "$OLD" .parquet | sed -E 's/^.*_to_([0-9\-]+)$/\1/')
-            START=$(date -I -d "$END_OLD + 1 day")
+            PREV_END=$(basename "$OLD" .parquet | sed -E 's/^.*_to_([0-9\-]+)$/\1/')
+            echo "mode=append" >> $GITHUB_OUTPUT
+            echo "start=$(date -I -d \"$PREV_END + 1 day\")" >> $GITHUB_OUTPUT
           else
-            START=${{ steps.dates.outputs.global_start }}
+            echo "mode=fresh" >> $GITHUB_OUTPUT
+            echo "start=${{ steps.dates.outputs.global_start }}" >> $GITHUB_OUTPUT
           fi
-          echo "start=$START" >> $GITHUB_OUTPUT
           echo "end=${{ steps.dates.outputs.today }}" >> $GITHUB_OUTPUT
 
+      # 6) Download
       - name: Download & unzip bookDepth
         run: |
           SYMBOL=${{ matrix.symbol }}
@@ -88,24 +95,42 @@ jobs:
             CUR=$(date -I -d "$CUR +1 day")
           done
 
-      - name: Extract & Append via Skript
+      # 7) Feature-Extraction **und** Append
+      - name: Extract & Append
         run: |
           SYMBOL=${{ matrix.symbol }}
-          START=${{ steps.resume.outputs.start }}
-          END=${{ steps.resume.outputs.end }}
-          OUT=features/bookDepth/${SYMBOL}/${SYMBOL}-features-${START}_to_${END}.parquet
-          mkdir -p "$(dirname "$OUT")"
+          GS=${{ steps.dates.outputs.global_start }}
+          NE=${{ steps.resume.outputs.end }}
+          DIR=features/bookDepth/${SYMBOL}
+          OUT="${DIR}/${SYMBOL}-features-${GS}_to_${NE}.parquet"
+          mkdir -p "$DIR"
+
+          # tmp-Datei zzgl. Append-Logik im Skript
+          TMP="${DIR}/tmp_${SYMBOL}.parquet"
+
+          # 7a) neu berechnen
           python3 extract_bookDepth_features.py \
             --input-dir raw/bookDepth/${SYMBOL} \
-            --start-date "$START" \
-            --end-date   "$END" \
-            --output-file "$OUT"
+            --start-date "${{ steps.resume.outputs.start }}" \
+            --end-date   "${{ steps.resume.outputs.end }}" \
+            --output-file "$TMP"
 
-      - name: Cleanup raw data
-        if: always()
-        run: rm -rf raw/bookDepth/${{ matrix.symbol }}
+          # 7b) append oder fresh
+          if [[ "${{ steps.resume.outputs.mode }}" == "append" ]]; then
+            python3 scripts/append_bookDepth.py \
+              "$(ls $DIR/${SYMBOL}-features-*.parquet | sort | tail -n1)" \
+              "$TMP" \
+              "$OUT"
+          else
+            mv "$TMP" "$OUT"
+          fi
 
-      - name: Commit & Push BookDepth
+          # aufräumen
+          rm -f raw/bookDepth/${SYMBOL}/*.csv
+          rm -f "$TMP"
+
+      # 8) Commit & Push
+      - name: Commit & Push
         run: |
           git config user.name  "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
