--- a/.github/workflows/bookdepth-incremental.yml
+++ b/.github/workflows/bookdepth-incremental.yml
@@ -116,6 +116,8 @@ jobs:
               "$DIR/tmp_${SYMBOL}.parquet" \
               "$OUT"
             rm "$OLD"
+            # tmp-file nach Merge entfernen
+            rm "$DIR/tmp_${SYMBOL}.parquet"
           else
             mv "$DIR/tmp_${SYMBOL}.parquet" "$OUT"
           fi
@@ -130,9 +132,11 @@ jobs:
         run: |
           git config user.name  "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
+          # Immer erst Rebase, sonst non-fast-forward:
+          git pull --rebase origin main
           git add features/bookDepth/${{ matrix.symbol }}
           if git diff --cached --quiet; then
-            echo "✔️ No new features to push"
+            echo "✔️ No changes"
           else
             git commit -m "♻️ ${{ matrix.symbol }} bookDepth-Features ${GS}→${NE}"
             git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} HEAD:main
