--- a/.github/workflows/bookdepth-incremental.yml
+++ b/.github/workflows/bookdepth-incremental.yml
@@ -28,8 +28,7 @@ jobs:
         with:
           fetch-depth: 0
           persist-credentials: true
-
-      - name: Pull latest main
+      - name: Pull remote main
         run: git pull --rebase origin main
 
       - name: Setup Python
@@ -37,34 +36,31 @@ jobs:
         with:
           python-version: '3.12'
 
-      - name: Install dependencies
+      - name: Install deps
         run: pip install --upgrade pandas pyarrow scipy
 
-      - name: Make extractor script executable
-        run: chmod +x extract_bookDepth_features.py
+      - name: Make scripts executable
+        run: |
+          chmod +x extract_bookDepth_features.py
+          chmod +x scripts/append_bookdepth.py
 
       - name: Calc dates
         id: dates
         run: |
-          echo "global_start=2025-01-01" >> $GITHUB_OUTPUT
+          echo "global_start=2025-01-01"       >> $GITHUB_OUTPUT
           echo "today=$(date -I -d 'yesterday')" >> $GITHUB_OUTPUT
 
       - name: Determine resume point
         id: resume
         run: |
           SYMBOL=${{ matrix.symbol }}
-          DIR=features/bookDepth/${SYMBOL}
+          DIR=features/bookDepth/$SYMBOL
           mkdir -p "$DIR"
-          # letztes historisches Parquet
-          OLD=$(ls $DIR/${SYMBOL}-features-*.parquet 2>/dev/null \
-                   | sort | tail -n1 || true)
+          OLD=$(ls $DIR/${SYMBOL}-features-*.parquet 2>/dev/null | sort | tail -n1 || true)
           if [[ -n "$OLD" ]]; then
-            # append mode: Start = Ende_OLD + 1 Tag
-            END_OLD=$(basename "$OLD" .parquet \
-                     | sed -E 's/^.*_to_([0-9\-]+)$/\1/')
+            END_OLD=$(basename "$OLD" .parquet | sed -E 's/^.*_to_([0-9-]+)$/\1/')
             START=$(date -I -d "$END_OLD + 1 day")
           else
-            # fresh mode
             START=${{ steps.dates.outputs.global_start }}
           fi
           echo "start=$START" >> $GITHUB_OUTPUT
@@ -75,47 +71,61 @@ jobs:
           SYMBOL=${{ matrix.symbol }}
           SD=${{ steps.resume.outputs.start }}
           ED=${{ steps.resume.outputs.end }}
-
-          # Inception-Datum je Symbol
+          # Inception logic, set INC per symbol if needed...
           case "$SYMBOL" in
             BTCUSDT|ETHUSDT|BNBUSDT|SOLUSDT) INC="2023-01-01";;
-            XRPUSDT) INC="2023-01-06";;
-            ENAUSDT) INC="2024-04-02";;
-            *) INC=$SD;;
+            XRPUSDT)                           INC="2023-01-06";;
+            ENAUSDT)                           INC="2024-04-02";;
+            *)                                 INC=$SD ;;
           esac
           [[ "$(date -d"$SD" +%s)" -lt "$(date -d"$INC" +%s)" ]] && SD="$INC"
-
-          echo "→ Downloading bookDepth from $SD to $ED"
-          mkdir -p raw/bookDepth/"$SYMBOL"
+          mkdir -p raw/bookDepth/$SYMBOL
           CUR="$SD"
           while [[ "$CUR" < "$ED" || "$CUR" == "$ED" ]]; do
             ZIP="${SYMBOL}-bookDepth-${CUR}.zip"
-            if curl -sSf \
-               "https://data.binance.vision/data/futures/um/daily/bookDepth/$SYMBOL/$ZIP" \
-               -o "$ZIP"; then
-              unzip -q -o "$ZIP" -d raw/bookDepth/"$SYMBOL"
+            if curl -sSf "https://data.binance.vision/data/futures/um/daily/bookDepth/$SYMBOL/$ZIP" -o "$ZIP"; then
+              unzip -q -o "$ZIP" -d raw/bookDepth/$SYMBOL
             fi
             rm -f "$ZIP"
-            CUR=$(date -I -d "$CUR + 1 day")
+            CUR=$(date -I -d "$CUR +1 day")
           done
 
-      - name: Extract & merge into final Parquet
+      - name: Extract only new range into tmp
+        run: |
+          SYMBOL=${{ matrix.symbol }}
+          TMP="features/bookDepth/${SYMBOL}/tmp_${SYMBOL}.parquet"
+          python3 extract_bookDepth_features.py \
+            --input-dir raw/bookDepth/${SYMBOL} \
+            --start-date "${{ steps.resume.outputs.start }}" \
+            --end-date   "${{ steps.resume.outputs.end }}" \
+            --output-file "$TMP"
+
+      - name: Append or Fresh
         run: |
           SYMBOL=${{ matrix.symbol }}
           GS=${{ steps.dates.outputs.global_start }}
-          START=${{ steps.resume.outputs.start }}
-          END=${{ steps.resume.outputs.end }}
-          OUT=features/bookDepth/${SYMBOL}/${SYMBOL}-features-${GS}_to_${END}.parquet
-          mkdir -p "$(dirname "$OUT")"
-          ./extract_bookDepth_features.py \
-            --input-dir raw/bookDepth/${SYMBOL} \
-            --start-date "$START" \
-            --end-date   "$END" \
-            --output-file "$OUT"
+          NE=${{ steps.resume.outputs.end }}
+          DIR=features/bookDepth/$SYMBOL
+          OUT="${DIR}/${SYMBOL}-features-${GS}_to_${NE}.parquet"
+          mkdir -p "$DIR"
+          OLD=$(ls $DIR/${SYMBOL}-features-${GS}_to_*.parquet 2>/dev/null | sort | tail -n1 || true)
 
-      - name: Cleanup raw
-        if: always()
-        run: rm -rf raw/bookDepth/${{ matrix.symbol }}
+          if [[ -n "$OLD" ]]; then
+            # Append mode
+            python3 scripts/append_bookdepth.py \
+              "$OLD" \
+              "features/bookDepth/${SYMBOL}/tmp_${SYMBOL}.parquet" \
+              "$OUT"
+            rm "$OLD"
+          else
+            # Fresh mode
+            mv "features/bookDepth/${SYMBOL}/tmp_${SYMBOL}.parquet" "$OUT"
+          fi
+
+      - name: Cleanup raw & tmp
+        run: |
+          rm -rf raw/bookDepth/${{ matrix.symbol }}
+          rm -f features/bookDepth/${{ matrix.symbol }}/tmp_*.parquet
 
       - name: Commit & Push BookDepth
         run: |
